# portfolio

./: .env.example  .gas-snapshot  .gitignore  .gitmodules  .prettierignore  .prettierrc.json  E2E.yaml  README.md  crytic_compile.config.json  encoder.js  foundry.toml  hardhat-coverage.config.ts  hardhat.config.ts  notes.md  package.json  remappings.txt  slither.config.json  tsconfig.json
app/: Cargo.toml
app/bindings/: Cargo.toml
app/bindings/src/: addresses.rs  assembly.rs  caller.rs  context.rs  do_jump.rs  enigma.rs  erc20.rs  erc20_like.rs  fixed_point_math_lib.rs  forwarder.rs  gaussian.rs  helper_hyper_actions.rs  helper_hyper_invariants.rs  helper_hyper_profiles.rs  helper_hyper_view.rs  helpers.rs  hyper.rs  hyper_catch_reverts.rs  hyper_forwarder_helper.rs  hyper_lib.rs  hyper_like.rs  hyper_tau.rs  hyper_time_override.rs  i_hyper.rs  i_hyper_actions.rs  i_hyper_events.rs  i_hyper_getters.rs  i_hyper_struct.rs  ierc20.rs  invariant.rs  invariant_allocate_unallocate.rs  invariant_breaker.rs  invariant_create_pool.rs  invariant_deposit.rs  invariant_fund_draw.rs  invariant_send_tokens.rs  invariant_target_contract.rs  invariant_warper.rs  iweth.rs  lib.rs  (+11 more)
app/src/: main.rs
chart/: asciichart-extended.js  cli.ts  index.ts  plot.ts  swapMath.ts
compiler/: README.md  index.ts  instructions.ts  sdk.ts  units.ts
contracts/: Accounting.sol  Assembly.sol  CPU.sol  Clock.sol  Compiler.sol  Decompiler.sol  Enigma.sol  EnigmaTypes.sol  EnigmaVirtualMachine.sol  Example.sol  GeometricPortfolio.sol  Hyper.sol  HyperCreate.sol  HyperLib.sol  HyperLiquidity.sol  (+19 more)
(+984 files in other folders)
